# docs/swagger.json
@@ -1030,7 +1030,7 @@
                 }
             }
         },
-        "/payment/quotation": {
+        "/payment/quote": {
             "post": {
                 "description": "Generate a new quotation for a customer",
                 "consumes": [
@@ -1045,13 +1045,12 @@
                 "summary": "Create a quotation",
                 "parameters": [
                     {
-                        "description": "Quotation details",
+                        "description": "Quote details",
                         "name": "input",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": true
+                            "$ref": "#/definitions/types.QuoteRequest"
                         }
                     }
                 ],
@@ -1059,17 +1058,31 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/types.QuoteResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
             }
         },
-        "/payment/quotations/customer/{customer_id}": {
+        "/payment/quote/{customerId}": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Retrieve all quotations associated with a specific customer",
                 "consumes": [
                     "application/json"
@@ -1096,9 +1109,20 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "type": "object",
-                                "additionalProperties": true
+                                "$ref": "#/definitions/types.QuotesResponse"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/types.ErrorResponse"
                         }
                     }
                 }
@@ -1135,6 +1159,87 @@
                 },
                 "updated_at": {
                     "type": "string"
+                }
+            }
+        },
+        "types.AddOnBreakdown": {
+            "type": "object",
+            "properties": {
+                "addonId": {
+                    "type": "string"
+                },
+                "addonName": {
+                    "type": "string"
+                },
+                "price": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.AddOnRequest": {
+            "type": "object",
+            "properties": {
+                "serviceDetail": {
+                    "$ref": "#/definitions/types.ServicesRequest"
+                }
+            }
+        },
+        "types.CarCleaningDetails": {
+            "type": "object",
+            "properties": {
+                "childSeats": {
+                    "type": "integer"
+                },
+                "cleaningSpecs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.CarCleaningSpecifications"
+                    }
+                }
+            }
+        },
+        "types.CarCleaningSpecifications": {
+            "type": "object",
+            "properties": {
+                "carType": {
+                    "type": "string"
+                },
+                "quantity": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.CouchCleaningDetails": {
+            "type": "object",
+            "properties": {
+                "bedPillows": {
+                    "type": "integer"
+                },
+                "cleaningSpecs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.CouchCleaningSpecifications"
+                    }
+                }
+            }
+        },
+        "types.CouchCleaningSpecifications": {
+            "type": "object",
+            "properties": {
+                "couchType": {
+                    "type": "string"
+                },
+                "depthCm": {
+                    "type": "integer"
+                },
+                "heightCm": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "widthCm": {
+                    "type": "integer"
                 }
             }
         },
@@ -1244,6 +1349,17 @@
                 }
             }
         },
+        "types.GeneralCleaningDetails": {
+            "type": "object",
+            "properties": {
+                "homeType": {
+                    "type": "string"
+                },
+                "sqm": {
+                    "type": "integer"
+                }
+            }
+        },
         "types.GetCustomerResponse": {
             "type": "object",
             "properties": {
@@ -1345,6 +1461,155 @@
                 "ItemTypeResource",
                 "ItemTypeEquipment"
             ]
+        },
+        "types.MainServiceType": {
+            "type": "string",
+            "enum": [
+                "SERVICE_TYPE_UNSPECIFIED",
+                "GENERAL_CLEANING",
+                "COUCH",
+                "MATTRESS",
+                "CAR",
+                "POST"
+            ],
+            "x-enum-varnames": [
+                "ServiceTypeUnspecified",
+                "GeneralCleaning",
+                "CouchCleaning",
+                "MattressCleaning",
+                "CarCleaning",
+                "PostCleaning"
+            ]
+        },
+        "types.MattressCleaningDetails": {
+            "type": "object",
+            "properties": {
+                "cleaningSpecs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.MattressCleaningSpecifications"
+                    }
+                }
+            }
+        },
+        "types.MattressCleaningSpecifications": {
+            "type": "object",
+            "properties": {
+                "bedType": {
+                    "type": "string"
+                },
+                "depthCm": {
+                    "type": "integer"
+                },
+                "heightCm": {
+                    "type": "integer"
+                },
+                "quantity": {
+                    "type": "integer"
+                },
+                "widthCm": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.PostConstructionDetails": {
+            "type": "object",
+            "properties": {
+                "sqm": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.QuoteRequest": {
+            "type": "object",
+            "properties": {
+                "addons": {
+                    "description": "same here",
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.AddOnRequest"
+                    }
+                },
+                "customerId": {
+                    "type": "string"
+                },
+                "service": {
+                    "description": "nested structs usually don't need db tags",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/types.ServicesRequest"
+                        }
+                    ]
+                }
+            }
+        },
+        "types.QuoteResponse": {
+            "type": "object",
+            "properties": {
+                "addonTotal": {
+                    "type": "number"
+                },
+                "addons": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.AddOnBreakdown"
+                    }
+                },
+                "mainServiceName": {
+                    "type": "string"
+                },
+                "mainServiceTotal": {
+                    "type": "number"
+                },
+                "quote_id": {
+                    "type": "string"
+                },
+                "totalPrice": {
+                    "type": "number"
+                }
+            }
+        },
+        "types.QuotesResponse": {
+            "type": "object",
+            "properties": {
+                "quotes": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/types.QuoteResponse"
+                    }
+                }
+            }
+        },
+        "types.ServiceDetail": {
+            "type": "object",
+            "properties": {
+                "car": {
+                    "$ref": "#/definitions/types.CarCleaningDetails"
+                },
+                "couch": {
+                    "$ref": "#/definitions/types.CouchCleaningDetails"
+                },
+                "general": {
+                    "$ref": "#/definitions/types.GeneralCleaningDetails"
+                },
+                "mattress": {
+                    "$ref": "#/definitions/types.MattressCleaningDetails"
+                },
+                "post": {
+                    "$ref": "#/definitions/types.PostConstructionDetails"
+                }
+            }
+        },
+        "types.ServicesRequest": {
+            "type": "object",
+            "properties": {
+                "details": {
+                    "$ref": "#/definitions/types.ServiceDetail"
+                },
+                "serviceType": {
+                    "$ref": "#/definitions/types.MainServiceType"
+                }
+            }
         },
         "types.SignUpCustomerRequest": {
             "type": "object",
